methods.args.MethodsArgs.scala.error
Erreur de compilation :
MethodsArgs:3: error: not found: value fversLAvant
  if (fversLAvant==true){
      ^