methods.args.MethodsArgs.scala.code
def move(nbPas: Int, versLAvant: Boolean){
  if (fversLAvant==true){
    avance(nbPas)
  }
  else {
    recule(nbPas)
  }
}